# yall-cosmic

./: Cargo.toml  README.md  justfile
i18n/en/: yall_cosmic.ftl
resources/: app.desktop  app.metainfo.xml  yall-cosmic.desktop  yall-cosmic.xpm
src/: app.rs  config.rs  crypto.rs  main.rs  social.rs
