[package]
name = "yall-cosmic"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Cosmic applet that allows posting to Nostr, Mastodon, and Bat once"
repository = "https://github.com/pop-os/cosmic-app-template"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
secp256k1 = "0.29"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
